--- a/custom-variable-up/CUSTOM_TESTING.ipynb
+++ b/custom-variable-up/CUSTOM_TESTING.ipynb
@@ -24,6 +24,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "uname = \n",
+    "pword = "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "2ee3792f",
    "metadata": {},
@@ -74,7 +84,7 @@
    ],
    "source": [
     "# Connect to remote xnat server\n",
-    "with x.connect('https://xnat.thembc.com.au', user='gsharma', password='MBCrmh2019#') as session:\n",
+    "with x.connect('https://xnat.thembc.com.au', user=uname, password=pword) as session:\n",
     "    xnat_project = session.projects['XNAT_DTEST']\n",
     "    for case in xnat_project.subjects.values():\n",
     "        print(case)\n",
@@ -93,7 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "session = x.connect('https://xnat.thembc.com.au', user='gsharma', password='MBCrmh2019#')"
+    "session = x.connect('https://xnat.thembc.com.au', user=uname, password=pword)"
    ]
   },
   {
