updates to variable-up

--- a/custom-variable-up/CUSTOM_TESTING.ipynb
+++ b/custom-variable-up/CUSTOM_TESTING.ipynb
@@ -12,88 +12,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "80462e96",
    "metadata": {},
    "outputs": [],
    "source": [
     "import xnat as x\n",
     "# import random\n",
+    "import numpy as np\n",
     "import pandas as pd "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3664c003",
    "metadata": {},
    "outputs": [],
    "source": [
-    "uname = \n",
-    "pword = "
+    "uname = 'gsharma'\n",
+    "pword = input('pwd')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "2ee3792f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import required csv file\n",
-    "df = pd.read_csv('sample.csv')\n",
-    "df.set_index(keys='Subject', inplace=True)"
+    "df = pd.read_csv('upload_sample.csv')\n",
+    "df.columns = [x.lower() for x in df.columns]\n",
+    "df.set_index(keys='subject', inplace=True)\n",
+    "variables =  list(df.columns)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "0590d6b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let user select project\n",
+    "def get_user_project(all_projects):\n",
+    "    proj_list = []\n",
+    "    for proj in session.projects:\n",
+    "        proj_list.append(proj)\n",
+    "        print(proj)\n",
+    "    \n",
+    "    user_input = ''\n",
+    "    while user_input not in proj_list:\n",
+    "        user_input = input('Select the correct project').upper()\n",
+    "        \n",
+    "    print(f'Selected project : {user_input}')\n",
+    "    return user_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b45e75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quality_check(to_find):\n",
+    "    qc_check = 'pass'\n",
+    "    for cvar in variables:\n",
+    "        to_check = df.loc[to_find,[cvar]].values[0]\n",
+    "        if np.isnan(to_check):\n",
+    "            qc_check = 'fail'\n",
+    "            return qc_check        \n",
+    "        if cvar == 'volume':\n",
+    "            if (to_check < 50) or (to_check > 80):\n",
+    "                qc_check = 'recheck'\n",
+    "        if cvar == 'ara_scale':\n",
+    "            if (to_check < 0) or (to_check > 10):\n",
+    "                qc_check = 'recheck'\n",
+    "        if cvar == 'nra_scale':\n",
+    "            if (to_check < 0) or (to_check > 5):\n",
+    "                qc_check = 'recheck'\n",
+    "    return qc_check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2c95ae1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[WARNING] Found an unsupported version (1.8.2.2), trying 1.7 compatible model builder\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<SubjectData XTEST_002 (MBCXNAT_S00097)>\n",
-      "<XNATSimpleListing {'volume': '65.71', 'qc_check': 'recheck', 'nra_scale': '2', 'ara_scale': '8'}>\n",
-      "<SubjectData XTEST_004 (MBCXNAT_S00098)>\n",
-      "<XNATSimpleListing {'volume': '56.65', 'qc_check': 'pass', 'nra_scale': '2', 'ara_scale': '6'}>\n",
-      "<SubjectData XTEST_005 (MBCXNAT_S00099)>\n",
-      "<XNATSimpleListing {'volume': '75.5', 'qc_check': 'pass', 'nra_scale': '5', 'ara_scale': '5'}>\n",
-      "<SubjectData XTEST_003 (MBCXNAT_S00100)>\n",
-      "<XNATSimpleListing {'volume': '51.73', 'qc_check': 'pass', 'nra_scale': '3', 'ara_scale': '6'}>\n",
-      "<SubjectData XTEST_007 (MBCXNAT_S00101)>\n",
-      "<XNATSimpleListing {'volume': '66.06', 'qc_check': 'recheck', 'nra_scale': '3', 'ara_scale': '8'}>\n",
-      "<SubjectData XTEST_001 (MBCXNAT_S00102)>\n",
-      "<XNATSimpleListing {'volume': '74.18', 'qc_check': 'pass', 'nra_scale': '4', 'ara_scale': '7'}>\n",
-      "<SubjectData XTEST_009 (MBCXNAT_S00103)>\n",
-      "<XNATSimpleListing {'volume': '63.95', 'qc_check': 'pass', 'nra_scale': '2', 'ara_scale': '7'}>\n",
-      "<SubjectData XTEST_006 (MBCXNAT_S00104)>\n",
-      "<XNATSimpleListing {'volume': '77.69', 'qc_check': 'pass', 'nra_scale': '4', 'ara_scale': '7'}>\n",
-      "<SubjectData XTEST_008 (MBCXNAT_S00105)>\n",
-      "<XNATSimpleListing {'volume': '0.0', 'qc_check': 'fail', 'nra_scale': '0', 'ara_scale': '0'}>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Connect to remote xnat server\n",
     "with x.connect('https://xnat.thembc.com.au', user=uname, password=pword) as session:\n",
-    "    xnat_project = session.projects['XNAT_DTEST']\n",
+    "    \n",
+    "    # List out projects and let user select\n",
+    "    all_projects = session.projects\n",
+    "    user_project = get_user_project(all_projects)\n",
+    "    xnat_project = session.projects[user_project]\n",
+    "    \n",
+    "    # Loop each subject in the project\n",
     "    for case in xnat_project.subjects.values():\n",
     "        print(case)\n",
+    "        \n",
+    "        # Loop over and assign values from csv to required custom variable\n",
     "        to_find = case.label\n",
-    "        case.fields['volume'] = df.loc[to_find,['volume']]\n",
-    "        case.fields['ara_scale'] = df.loc[to_find,['ara_scale']]\n",
-    "        case.fields['nra_scale'] = df.loc[to_find,['nra_scale']]\n",
-    "        case.fields['qc_check'] = df.loc[to_find,['qc_check']]\n",
-    "        print(case.fields)"
+    "        for cvar in variables:\n",
+    "            case.fields[cvar] = df.loc[to_find,[cvar]]\n",
+    "        \n",
+    "        # Data Quality check\n",
+    "        #\n",
+    "        '''\n",
+    "        qc_check = 'pass'    \n",
+    "        for cvar in variables:\n",
+    "            to_check = df.loc[to_find,[cvar]].values[0]\n",
+    "            if np.isnan(to_check):\n",
+    "                qc_check = 'fail'\n",
+    "                break\n",
+    "            if cvar == 'volume':\n",
+    "                if (to_check < 50) or (to_check > 80):\n",
+    "                    qc_check = 're-check'\n",
+    "            if cvar == 'ara_scale':\n",
+    "                if (to_check < 0) or (to_check > 10):\n",
+    "                    qc_check = 're-check'\n",
+    "            if cvar == 'nra_scale':\n",
+    "                if (to_check < 0) or (to_check > 5):\n",
+    "                    qc_check = 're-check'\n",
+    "        '''\n",
+    "        qc_check = quality_check(to_find)\n",
+    "        case.fields['qc_check'] = qc_check\n",
+    "        print(case.fields)\n"
    ]
   },
   {
@@ -169,22 +217,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d87add18",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'session' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-53337d0aa62b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisconnect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'session' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "session.disconnect()"
    ]
@@ -204,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.loc['XTEST_005',['volume']]"
+    "dsf"
    ]
   },
   {
@@ -216,8 +252,7 @@
    },
    "outputs": [],
    "source": [
-    "for x, y in case.fields.items():\n",
-    "  print(x, y)"
+    "variables =  list(df.columns)"
    ]
   },
   {
@@ -227,8 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for x in case.fields:\n",
-    "    print(x)"
+    "variables"
    ]
   },
   {
@@ -238,7 +272,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "case.fields['volume']"
+    "for var in variables:\n",
+    "    case.fields[var] = df.loc[to_find,[var]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f64e470d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_user_project(all_projects):\n",
+    "    proj_list = []\n",
+    "    for proj in session.projects:\n",
+    "        proj_list.append(proj)\n",
+    "        print(proj)\n",
+    "    \n",
+    "    user_input = ''\n",
+    "    while user_input not in proj_list:\n",
+    "        user_input = input('Select the correct project').upper()\n",
+    "        \n",
+    "    print(f'Selected project : {user_input}')\n",
+    "    return user_input"
    ]
   },
   {
@@ -250,7 +306,43 @@
    },
    "outputs": [],
    "source": [
-    "cust_dict['volume']"
+    "with x.connect('https://xnat.thembc.com.au', user=uname, password=pword) as session:\n",
+    "    all_projects = session.projects\n",
+    "    user_project = get_user_project(all_projects)\n",
+    "    xnat_project = session.projects[user_project]\n",
+    "    for case in xnat_project.subjects.values():\n",
+    "        print(case)\n",
+    "        to_find = case.labeldf.loc[to_find,[cvar]]\n",
+    "        for cvar in variables:\n",
+    "            case.fields[cvar] = df.loc[to_find,[cvar]]\n",
+    "        print(case.fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b665c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def quality_check(to_find):\n",
+    "    qc_check = 'pass'\n",
+    "    for cvar in variables:\n",
+    "        to_check = df.loc[to_find,[cvar]].values[0]\n",
+    "        print(cvar , to_check)\n",
+    "        if np.isnan(to_check):\n",
+    "            qc_check = 'fail'\n",
+    "            return qc_check        \n",
+    "        if cvar == 'volume':\n",
+    "            if (to_check < 50) or (to_check > 80):\n",
+    "                qc_check = 'recheck'\n",
+    "        if cvar == 'ara_scale':\n",
+    "            if (to_check < 0) or (to_check > 10):\n",
+    "                qc_check = 'recheck'\n",
+    "        if cvar == 'nra_scale':\n",
+    "            if (to_check < 0) or (to_check > 5):\n",
+    "                qc_check = 'recheck'\n",
+    "    return qc_check\n"
    ]
   },
   {
@@ -260,7 +352,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(cust_dict)"
+    "   \n",
+    "qc_check = quality_check('XTEST_008')\n",
+    "print(qc_check)"
    ]
   },
   {
