--- a/deident-up/deident-up.ipynb
+++ b/deident-up/deident-up.ipynb
@@ -3,28 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2f33ea13",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import xnat as x\n",
     "# import random\n",
     "import numpy as np\n",
     "import pydicom"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0b5698fd",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "uname = 'brokaha'\n",
     "pword = input('pwd ')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cea9db8e",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def create_table(table):\n",
     "    # Create mapping dictionary from a text file\n",
@@ -39,17 +44,18 @@
     "\n",
     "dic = {}\n",
     "\n",
-    "file = './TABLE.txt'\n",
+    "file = '../../TABLE.txt'\n",
     "\n",
     "dic = create_table(file)\n",
     "print(dic)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "85e4cc5f",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with x.connect('https://xnat.thembc.com.au', user=uname, password=pword) as session:\n",
     "    # Create a new name for subject and experiment\n",
@@ -65,13 +71,14 @@
     "            pas.archive(subject=subject_name, experiment=exp_name)\n",
     "        except:\n",
     "            print(\"Subject not present in Table\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "395428f1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with x.connect('https://xnat.thembc.com.au', user=uname, password=pword) as session:\n",
     "    proj = session.projects['XNAT_DTEST']\n",
@@ -82,13 +89,14 @@
     "    studytime, sep, tail = (ds.StudyTime).partition('.')\n",
     "    label = f'{ds.StudyDate}T{studytime}'\n",
     "    print(label)\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "48aae426",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "with x.connect('https://xnat.thembc.com.au', user=uname, password=pword) as session:\n",
     "    prearc = session.prearchive.sessions()\n",
@@ -111,13 +119,14 @@
     "            eachp.archive(subject=subject_name, experiment=exp_name)\n",
     "        except:\n",
     "            print(\"Subject not present in Table\")\n"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c3c9941",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "if work_subject in dic:\n",
     "    scan = eachp.scans\n",
@@ -134,9 +143,7 @@
     "    eachp.archive(subject=subject_name, experiment=exp_name)\n",
     "else:\n",
     "    print(\"Subject not present in Table\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
