--- a/deident-up/deident-up.ipynb
+++ b/deident-up/deident-up.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2f33ea13",
    "metadata": {},
    "outputs": [],
@@ -176,16 +176,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "0eb1a9a8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STOPMSU003_80_03\n",
+      "STOPMSU012_80_10\n",
+      "STOPMSU004_80_04\n",
+      "STOPMSU001_80_01\n",
+      "STOPMSU014_80_12\n",
+      "STOPMSU015_80_13\n",
+      "STOPMSU007_80_06\n",
+      "STOPMSU010_01_02\n",
+      "STOPMSU005_01_01\n",
+      "STOPMSU002_80_02\n",
+      "STOPMSU013_80_11\n",
+      "STOPMSU008_80_07\n",
+      "STOPMSU009_80_08\n",
+      "STOPMSU006_80_05\n",
+      "STOPMSU011_80_09\n",
+      "STOPMSU025_80_18\n",
+      "STOPMSU022_12_01\n",
+      "STOPMSU018_09_01\n",
+      "STOPMSU024_80_17\n",
+      "STOPMSU017_80_15\n",
+      "STOPMSU028_09_04\n",
+      "STOPMSU020_01_03\n",
+      "STOPMSU029_80_19\n",
+      "STOPMSU016_80_14\n",
+      "STOPMSU026_76_01\n",
+      "STOPMSU023_80_16\n",
+      "STOPMSU019_09_02\n",
+      "STOPMSU027_27_01\n",
+      "STOPMSU021_09_03\n",
+      "STOPMSU032_01_04\n",
+      "STOPMSU042_76_02\n",
+      "STOPMSU033_80_22\n",
+      "STOPMSU046_54_02\n",
+      "STOPMSU045_01_07\n",
+      "STOPMSU039_01_06\n",
+      "STOPMSU048_01_08\n",
+      "STOPMSU038_80_23\n",
+      "STOPMSU035_21_01\n",
+      "STOPMSU041_12_02\n",
+      "STOPMSU049_56_01\n",
+      "STOPMSU043_54_01\n",
+      "STOPMSU034_09_05\n",
+      "STOPMSU036_01_05\n",
+      "STOPMSU031_80_21\n",
+      "STOPMSU066_06_01\n",
+      "STOPMSU068_56_02\n",
+      "STOPMSU050_01_09\n",
+      "STOPMSU063_01_12\n",
+      "STOPMSU070_01_15\n",
+      "STOPMSU072_80_28\n",
+      "STOPMSU057_01_11\n",
+      "STOPMSU053_01_10\n",
+      "STOPMSU051_04_01\n",
+      "STOPMSU056_04_02\n",
+      "STOPMSU062_80_25\n",
+      "STOPMSU064_01_13\n",
+      "STOPMSU052_09_06\n",
+      "STOPMSU071_80_27\n",
+      "STOPMSU069_33_03\n",
+      "STOPMSU075_29_01\n",
+      "STOPMSU054_12_03\n",
+      "STOPMSU060_80_24\n",
+      "STOPMSU067_01_14\n",
+      "STOPMSU061_09_07\n",
+      "STOPMSU080_03_01\n",
+      "STOPMSU077_12_04\n",
+      "STOPMSU088_77_01\n",
+      "STOPMSU082_12_05\n",
+      "STOPMSU087_80_31\n",
+      "STOPMSU089_56_04\n",
+      "STOPMSU085_80_30\n",
+      "STOPMSU081_06_02\n",
+      "STOPMSU084_80_29\n",
+      "STOPMSU109_01_21\n",
+      "STOPMSU090_06_03\n",
+      "STOPMSU104_06_06\n",
+      "STOPMSU105_80_33\n",
+      "STOPMSU102_17_11\n",
+      "STOPMSU037_17_01\n",
+      "STOPMSU073_17_07\n",
+      "STOPMSU059_17_06\n",
+      "STOPMSU079_01_17\n",
+      "STOPMSU074_17_08\n",
+      "STOPMSU086_56_03\n",
+      "STOPMSU076_01_16\n",
+      "STOPMSU083_09_08\n",
+      "STOPMSU097_30_01\n",
+      "STOPMSU093_01_18\n",
+      "STOPMSU092_80_32\n",
+      "STOPMSU107_01_20\n",
+      "STOPMSU099_03_02\n",
+      "STOPMSU098_01_19\n",
+      "STOPMSU110_56_05\n",
+      "STOPMSU058_17_05\n",
+      "STOPMSU055_17_04\n",
+      "STOPMSU095_17_09\n",
+      "STOPMSU040_17_02\n",
+      "STOPMSU101_30_02\n",
+      "STOPMSU094_06_04\n",
+      "STOPMSU106_30_03\n",
+      "STOPMSU108_09_10\n",
+      "STOPMSU096_17_10\n",
+      "STOPMSU044_17_03\n",
+      "STOPMSU103_17_12\n"
+     ]
+    }
+   ],
+   "source": [
+    "with x.connect('https://dev-xnat.thembc.com.au', user=uname, password=pword) as session:\n",
+    "    # Create a new name for subject and experiment\n",
+    "    sandbox_project = session.projects[\"STOP_MSU\"]\n",
+    "    for subject in sandbox_project.subjects.values():\n",
+    "        print(subject.label)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -199,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
